--- a/release-notes/v1_25.md
+++ b/release-notes/v1_25.md
@@ -561,8 +561,8 @@ This display requires that Language Pack authors translate the following minimal
 {
    showLanguagePackExtensions: localize('showLanguagePackExtensions', "Search language packs in the Marketplace to change the display language to {0}."),
    searchMarketplace: localize('searchMarketplace', "Search Marketplace"),
-   installAndRestartMessage: localize('installAndRestartMessage', "Install language pack to change the display language to {0}."),
-   installAndRestart: localize('installAndRestart', "Install and Restart")
+'installAndRestart''installAndRestart'tartMessagetartMessage: localize('install'installAndRestart'RestartMessage', "Install language pack to change the display language to {0}."),
+   installAndRestart: localize('installAndRestart', "Install andand Restart")
 }
 ```
 
